--- a/src/components/ArtTreasure.astro
+++ b/src/components/ArtTreasure.astro
@@ -23,6 +23,6 @@ const art: artTreasure = data.art;
 <h5>{art.name} Level {art.level}</h5>
 <ul>
     {art.buff.map((b: buff) => (
-            <li>{b.condition} {b.class} {b.attribute} {(b.value[0] < 0) ? '-' : '+'}{b.value[0]}{b.value[1] ? '%': ''}</li>
+            <li>{b.condition} {b.class} {b.attribute} {(b.value.number < 0) ? '-' : '+'}{b.value.number}{b.value.unit ? '%': ''}</li>
                     ))}
 </ul>
