this works to the extent the data is present. the data is horribly sensitive

--- a/src/components/general/Pairing.astro
+++ b/src/components/general/Pairing.astro
@@ -2,7 +2,7 @@
 import {PairingTable} from "./PairingTable";
 
 const dataUrl = new URL('/generals/all.json', Astro.url)
-const conflictData = new URL('/generals/conflicts.json', Astro.url)
+const conflictData = new URL('/generalConflictData/conflicts.json', Astro.url)
 ---
 
 <PairingTable dataurl={dataUrl} conflictdata={conflictData} client:only></PairingTable>
