--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -31,3 +31,24 @@ sp-theme {
 section.footnotes {
   border-top: 1px solid; padding-top: 1.5rem
 }
+
+/* Color Theme Swatches in Hex */
+.Cyan-600-Theme-1-1-hex { color: #14B0DA; }
+.Cyan-600-Theme-1-2-hex { color: #F8F8F8; }
+.Cyan-600-Theme-1-3-hex { color: #408038; }
+.Cyan-600-Theme-1-4-hex { color: #3F5EE1; }
+.Cyan-600-Theme-1-5-hex { color: #DE6D8D; }
+
+/* Color Theme Swatches in RGBA */
+.Cyan-600-Theme-1-1-rgba { color: rgba(20, 176, 218, 1); }
+.Cyan-600-Theme-1-2-rgba { color: rgba(248, 248, 248, 1); }
+.Cyan-600-Theme-1-3-rgba { color: rgba(64, 128, 56, 1); }
+.Cyan-600-Theme-1-4-rgba { color: rgba(63, 94, 225, 1); }
+.Cyan-600-Theme-1-5-rgba { color: rgba(222, 109, 141, 1); }
+
+/* Color Theme Swatches in HSLA */
+.Cyan-600-Theme-1-1-hsla { color: hsla(192, 83, 46, 1); }
+.Cyan-600-Theme-1-2-hsla { color: hsla(0, 0, 97, 1); }
+.Cyan-600-Theme-1-3-hsla { color: hsla(113, 39, 36, 1); }
+.Cyan-600-Theme-1-4-hsla { color: hsla(228, 72, 56, 1); }
+.Cyan-600-Theme-1-5-hsla { color: hsla(343, 63, 64, 1); }
